[gd_scene load_steps=12 format=3 uid="uid://iqoiw2siwxeq"]

[ext_resource type="Script" path="res://scripts/ai_controller.gd" id="1_o0qyq"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_5uy0m"]
[ext_resource type="SpriteFrames" uid="uid://b5y2k0oe4jdi6" path="res://resources/adversary_spriteframes.tres" id="3_mmim8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_u05oe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="5_ed846"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_fhwiu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_46emj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_152tu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hgakl"]
radius = 22.0
height = 88.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kqh6a"]
radius = 19.0
height = 56.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kfjmh"]
radius = 22.0227

[node name="AIPlayer" type="Node" node_paths=PackedStringArray("home_goal", "away_goal", "opponent", "ball")]
script = ExtResource("1_o0qyq")
home_goal = NodePath("")
away_goal = NodePath("")
opponent = NodePath("")
ball = NodePath("")
seek_stop_distance = 50.0
goal_attempt_distance = 400.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(2383, 273)
collision_mask = 2
script = ExtResource("2_5uy0m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(0, -55)
sprite_frames = ExtResource("3_mmim8")
animation = &"walk"

[node name="PlayerCollider" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -44)
shape = SubResource("CapsuleShape2D_hgakl")

[node name="KickZone" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="KickCollider" type="CollisionShape2D" parent="Player/KickZone"]
position = Vector2(18, -19)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kqh6a")

[node name="HeadbuttZone" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HeadbuttZone"]
position = Vector2(0, -69)
rotation = 3.13224
shape = SubResource("CircleShape2D_kfjmh")
debug_color = Color(0.801051, 0.26373, 0.812251, 0.42)

[node name="DribbleMarker" type="Marker2D" parent="Player"]
position = Vector2(56, -20)

[node name="DribbleCast" type="RayCast2D" parent="Player"]
position = Vector2(0, -19)
target_position = Vector2(56, 0)
collision_mask = 14
hit_from_inside = true

[node name="IdleTimer" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.1

[node name="TurnLeftTimer" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.3

[node name="TurnRightTimer" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.3

[node name="StateChart" type="Node" parent="Player"]
process_thread_group = 1
process_thread_group_order = 0
process_thread_messages = 0
script = ExtResource("4_u05oe")

[node name="Root" type="Node" parent="Player/StateChart"]
script = ExtResource("5_ed846")

[node name="Movement" type="Node" parent="Player/StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("In The Air")

[node name="Running" type="Node" parent="Player/StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Pre Idle" type="Node" parent="Player/StateChart/Root/Movement/Running"]
script = ExtResource("8_152tu")
to = NodePath("../../Pre Idle")
event = &"running_to_pre_idle"
delay_in_seconds = "0.0"

[node name="To Jump" type="Node" parent="Player/StateChart/Root/Movement/Running"]
script = ExtResource("8_152tu")
to = NodePath("../../Jump")
event = &"running_to_jump"
delay_in_seconds = "0.0"

[node name="To In The Air" type="Node" parent="Player/StateChart/Root/Movement/Running"]
script = ExtResource("8_152tu")
to = NodePath("../../In The Air")
event = &"running_to_in_the_air"
delay_in_seconds = "0.0"

[node name="Pre Idle" type="Node" parent="Player/StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Running" type="Node" parent="Player/StateChart/Root/Movement/Pre Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Running")
event = &"pre_idle_to_running"
delay_in_seconds = "0.0"

[node name="To Idle" type="Node" parent="Player/StateChart/Root/Movement/Pre Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Idle")
event = &"pre_idle_to_idle"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="Player/StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Running" type="Node" parent="Player/StateChart/Root/Movement/Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Running")
event = &"idle_to_running"
delay_in_seconds = "0.0"

[node name="To Jump" type="Node" parent="Player/StateChart/Root/Movement/Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Jump")
event = &"idle_to_jump"
delay_in_seconds = "0.0"

[node name="To In The Air" type="Node" parent="Player/StateChart/Root/Movement/Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../In The Air")
event = &"idle_to_in_the_air"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="Player/StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To In The Air" type="Node" parent="Player/StateChart/Root/Movement/Jump"]
script = ExtResource("8_152tu")
to = NodePath("../../In The Air")
event = &"jump_to_in_the_air"
delay_in_seconds = ""

[node name="In The Air" type="Node" parent="Player/StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Running" type="Node" parent="Player/StateChart/Root/Movement/In The Air"]
script = ExtResource("8_152tu")
to = NodePath("../../Running")
event = &"in_the_air_to_running"
delay_in_seconds = "0.0"

[node name="Kicking" type="Node" parent="Player/StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("Cannot Kick")

[node name="Cannot Kick" type="Node" parent="Player/StateChart/Root/Kicking"]
script = ExtResource("7_46emj")

[node name="To Can Kick" type="Node" parent="Player/StateChart/Root/Kicking/Cannot Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Can Kick")
event = &"cannot_kick_to_can_kick"
delay_in_seconds = "0.0"

[node name="To Ready To Dribble" type="Node" parent="Player/StateChart/Root/Kicking/Cannot Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Ready To Dribble")
event = &"cannot_kick_to_ready_to_dribble"
delay_in_seconds = "0.0"

[node name="Can Kick" type="Node" parent="Player/StateChart/Root/Kicking"]
script = ExtResource("7_46emj")

[node name="To Cannot Kick" type="Node" parent="Player/StateChart/Root/Kicking/Can Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Kick")
event = &"can_kick_to_cannot_kick"
delay_in_seconds = "0.0"

[node name="To Kick" type="Node" parent="Player/StateChart/Root/Kicking/Can Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Kick")
event = &"can_kick_to_kick"
delay_in_seconds = "0.0"

[node name="To Dribble" type="Node" parent="Player/StateChart/Root/Kicking/Can Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Dribble")
event = &"can_kick_to_dribble"
delay_in_seconds = "0.0"

[node name="Kick" type="Node" parent="Player/StateChart/Root/Kicking"]
script = ExtResource("7_46emj")

[node name="To Cannot Kick" type="Node" parent="Player/StateChart/Root/Kicking/Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Kick")
event = &"kick_to_cannot_kick"
delay_in_seconds = "0.2"

[node name="Ready To Dribble" type="Node" parent="Player/StateChart/Root/Kicking"]
script = ExtResource("7_46emj")

[node name="To Cannot Kick" type="Node" parent="Player/StateChart/Root/Kicking/Ready To Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Kick")
event = &"ready_to_dribble_to_cannot_kick"
delay_in_seconds = "0.0"

[node name="To Dribble" type="Node" parent="Player/StateChart/Root/Kicking/Ready To Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Dribble")
event = &"ready_to_dribble_to_dribble"
delay_in_seconds = "0.0"

[node name="Dribble" type="Node" parent="Player/StateChart/Root/Kicking"]
script = ExtResource("7_46emj")

[node name="To Kick" type="Node" parent="Player/StateChart/Root/Kicking/Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Kick")
event = &"dribble_to_kick"
delay_in_seconds = "0.0"

[node name="To Can Kick" type="Node" parent="Player/StateChart/Root/Kicking/Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Can Kick")
event = &"dribble_to_can_kick"
delay_in_seconds = "0.0"

[node name="To Cannot Kick" type="Node" parent="Player/StateChart/Root/Kicking/Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Kick")
event = &"dribble_to_cannot_kick"
delay_in_seconds = "0.0"

[node name="Direction" type="Node" parent="Player/StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("Face Right")

[node name="Face Right" type="Node" parent="Player/StateChart/Root/Direction"]
script = ExtResource("7_46emj")

[node name="To Face Left" type="Node" parent="Player/StateChart/Root/Direction/Face Right"]
script = ExtResource("8_152tu")
to = NodePath("../../Face Left")
event = &"right_to_left"
delay_in_seconds = "0.0"

[node name="To Turn Left" type="Node" parent="Player/StateChart/Root/Direction/Face Right"]
script = ExtResource("8_152tu")
to = NodePath("../../Turn Left")
event = &"face_right_to_turn_left"
delay_in_seconds = "0.0"

[node name="Face Left" type="Node" parent="Player/StateChart/Root/Direction"]
script = ExtResource("7_46emj")

[node name="To Face Right" type="Node" parent="Player/StateChart/Root/Direction/Face Left"]
script = ExtResource("8_152tu")
to = NodePath("../../Face Right")
event = &"left_to_right"
delay_in_seconds = "0.0"

[node name="To Turn Right" type="Node" parent="Player/StateChart/Root/Direction/Face Left"]
script = ExtResource("8_152tu")
to = NodePath("../../Turn Right")
event = &"face_left_to_turn_right"
delay_in_seconds = "0.0"

[node name="Turn Left" type="Node" parent="Player/StateChart/Root/Direction"]
script = ExtResource("7_46emj")

[node name="To Face Left" type="Node" parent="Player/StateChart/Root/Direction/Turn Left"]
script = ExtResource("8_152tu")
to = NodePath("../../Face Left")
event = &"turn_left_to_face_left"
delay_in_seconds = "0.0"

[node name="Turn Right" type="Node" parent="Player/StateChart/Root/Direction"]
script = ExtResource("7_46emj")

[node name="To Face Right" type="Node" parent="Player/StateChart/Root/Direction/Turn Right"]
script = ExtResource("8_152tu")
to = NodePath("../../Face Right")
event = &"turn_right_to_face_right"
delay_in_seconds = "0.0"

[node name="Headbutting" type="Node" parent="Player/StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("Cannot Headbutt")

[node name="Cannot Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting"]
script = ExtResource("7_46emj")

[node name="To Can Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting/Cannot Headbutt"]
script = ExtResource("8_152tu")
to = NodePath("../../Can Headbutt")
event = &"cannot_headbutt_to_can_headbutt"
delay_in_seconds = "0.0"

[node name="Can Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting"]
script = ExtResource("7_46emj")

[node name="To Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting/Can Headbutt"]
script = ExtResource("8_152tu")
to = NodePath("../../Headbutt")
event = &"can_headbutt_to_headbutt"
delay_in_seconds = "0.0"

[node name="To Cannot Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting/Can Headbutt"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Headbutt")
event = &"can_headbutt_to_cannot_headbutt"
delay_in_seconds = "0.0"

[node name="Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting"]
script = ExtResource("7_46emj")

[node name="To Cannot Headbutt" type="Node" parent="Player/StateChart/Root/Headbutting/Headbutt"]
script = ExtResource("8_152tu")
to = NodePath("../../Cannot Headbutt")
event = &"headbutt_to_cannot_headbutt"
delay_in_seconds = "0.0"

[node name="PatrolTimer" type="Timer" parent="."]
process_callback = 0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_u05oe")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_ed846")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Move Left" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Move Left")
event = &"idle_to_move_left"
delay_in_seconds = "0.0"

[node name="To Move Right" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("8_152tu")
to = NodePath("../../Move Right")
event = &"idle_to_move_right"
delay_in_seconds = "0.0"

[node name="Move Left" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Idle" type="Node" parent="StateChart/Root/Movement/Move Left"]
script = ExtResource("8_152tu")
to = NodePath("../../Idle")
event = &"move_left_to_idle"
delay_in_seconds = "0.0"

[node name="To Move Right" type="Node" parent="StateChart/Root/Movement/Move Left"]
script = ExtResource("8_152tu")
to = NodePath("../../Move Right")
event = &"move_left_to_move_right"
delay_in_seconds = "0.0"

[node name="Move Right" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("7_46emj")

[node name="To Idle" type="Node" parent="StateChart/Root/Movement/Move Right"]
script = ExtResource("8_152tu")
to = NodePath("../../Idle")
event = &"move_right_to_idle"
delay_in_seconds = "0.0"

[node name="To Move Left" type="Node" parent="StateChart/Root/Movement/Move Right"]
script = ExtResource("8_152tu")
to = NodePath("../../Move Left")
event = &"move_right_to_move_left"
delay_in_seconds = "0.0"

[node name="Ball Control" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("No Ball")

[node name="No Ball" type="Node" parent="StateChart/Root/Ball Control"]
script = ExtResource("7_46emj")

[node name="To Kick" type="Node" parent="StateChart/Root/Ball Control/No Ball"]
script = ExtResource("8_152tu")
to = NodePath("../../Kick")
event = &"no_ball_to_kick"
delay_in_seconds = "0.0"

[node name="To Dribble" type="Node" parent="StateChart/Root/Ball Control/No Ball"]
script = ExtResource("8_152tu")
to = NodePath("../../Dribble")
event = &"no_ball_to_dribble"
delay_in_seconds = "0.0"

[node name="Kick" type="Node" parent="StateChart/Root/Ball Control"]
script = ExtResource("7_46emj")

[node name="To No Ball" type="Node" parent="StateChart/Root/Ball Control/Kick"]
script = ExtResource("8_152tu")
to = NodePath("../../No Ball")
event = &"kick_to_no_ball"
delay_in_seconds = "0.0"

[node name="Dribble" type="Node" parent="StateChart/Root/Ball Control"]
script = ExtResource("7_46emj")

[node name="To No Ball" type="Node" parent="StateChart/Root/Ball Control/Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../No Ball")
event = &"dribble_to_no_ball"
delay_in_seconds = "0.0"

[node name="To Kick" type="Node" parent="StateChart/Root/Ball Control/Dribble"]
script = ExtResource("8_152tu")
to = NodePath("../../Kick")
event = &"dribble_to_kick"
delay_in_seconds = "0.0"

[node name="Behavior" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fhwiu")
initial_state = NodePath("Seek")

[node name="Defend" type="Node" parent="StateChart/Root/Behavior"]
script = ExtResource("7_46emj")

[node name="To Seek" type="Node" parent="StateChart/Root/Behavior/Defend"]
script = ExtResource("8_152tu")
to = NodePath("../../Seek")
event = &"defend_to_seek"
delay_in_seconds = "0.0"

[node name="Seek" type="Node" parent="StateChart/Root/Behavior"]
script = ExtResource("7_46emj")

[node name="To Defend" type="Node" parent="StateChart/Root/Behavior/Seek"]
script = ExtResource("8_152tu")
to = NodePath("../../Defend")
event = &"seek_to_defend"
delay_in_seconds = "0.0"

[node name="To Attack" type="Node" parent="StateChart/Root/Behavior/Seek"]
script = ExtResource("8_152tu")
to = NodePath("../../Attack")
event = &"seek_to_attack"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Behavior"]
script = ExtResource("7_46emj")

[node name="To Seek" type="Node" parent="StateChart/Root/Behavior/Attack"]
script = ExtResource("8_152tu")
to = NodePath("../../Seek")
event = &"attack_to_seek"
delay_in_seconds = "0.0"

[node name="To Defend" type="Node" parent="StateChart/Root/Behavior/Attack"]
script = ExtResource("8_152tu")
to = NodePath("../../Defend")
event = &"attack_to_defend"
delay_in_seconds = "0.0"

[node name="Celebrate" type="Node" parent="StateChart/Root/Behavior"]
script = ExtResource("7_46emj")

[connection signal="did_headbutt" from="Player" to="." method="_on_player_did_headbutt"]
[connection signal="did_jump" from="Player" to="." method="_on_player_did_jump"]
[connection signal="ended_dribbling" from="Player" to="." method="_on_player_ended_dribbling"]
[connection signal="entered_kickzone" from="Player" to="." method="_on_player_entered_kickzone"]
[connection signal="left_kickzone" from="Player" to="." method="_on_player_left_kickzone"]
[connection signal="lost_ball" from="Player" to="." method="_on_player_lost_ball"]
[connection signal="player_velocity" from="Player" to="." method="_on_player_player_velocity"]
[connection signal="started_dribbling" from="Player" to="." method="_on_player_started_dribbling"]
[connection signal="velocity_x" from="Player" to="." method="_on_player_velocity_x"]
[connection signal="body_entered" from="Player/KickZone" to="Player" method="_on_kick_zone_body_entered"]
[connection signal="body_exited" from="Player/KickZone" to="Player" method="_on_kick_zone_body_exited"]
[connection signal="body_entered" from="Player/HeadbuttZone" to="Player" method="_on_headbutt_zone_body_entered"]
[connection signal="timeout" from="Player/IdleTimer" to="Player" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Player/TurnLeftTimer" to="Player" method="_on_turn_left_timer_timeout"]
[connection signal="timeout" from="Player/TurnRightTimer" to="Player" method="_on_turn_right_timer_timeout"]
[connection signal="state_entered" from="Player/StateChart/Root/Movement/Running" to="Player" method="_on_running_state_entered"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Movement/Running" to="Player" method="_on_running_state_physics_processing"]
[connection signal="state_processing" from="Player/StateChart/Root/Movement/Running" to="Player" method="_on_running_state_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Movement/Pre Idle" to="Player" method="_on_pre_idle_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Movement/Pre Idle" to="Player" method="_on_pre_idle_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Movement/Pre Idle" to="Player" method="_on_pre_idle_state_physics_processing"]
[connection signal="state_exited" from="Player/StateChart/Root/Movement/Idle" to="Player" method="_on_idle_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Movement/Idle" to="Player" method="_on_idle_state_physics_processing"]
[connection signal="state_processing" from="Player/StateChart/Root/Movement/Idle" to="Player" method="_on_idle_state_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Movement/Jump" to="Player" method="_on_jump_state_entered"]
[connection signal="state_entered" from="Player/StateChart/Root/Movement/In The Air" to="Player" method="_on_in_the_air_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Movement/In The Air" to="Player" method="_on_in_the_air_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Movement/In The Air" to="Player" method="_on_in_the_air_state_physics_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Kicking/Kick" to="Player" method="_on_kick_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Kicking/Kick" to="Player" method="_on_kick_state_exited"]
[connection signal="state_entered" from="Player/StateChart/Root/Kicking/Dribble" to="Player" method="_on_dribble_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Kicking/Dribble" to="Player" method="_on_dribble_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Kicking/Dribble" to="Player" method="_on_dribble_state_physics_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Direction/Face Right" to="Player" method="_on_face_right_state_entered"]
[connection signal="state_entered" from="Player/StateChart/Root/Direction/Face Left" to="Player" method="_on_face_left_state_entered"]
[connection signal="state_entered" from="Player/StateChart/Root/Direction/Turn Left" to="Player" method="_on_turn_left_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Direction/Turn Left" to="Player" method="_on_turn_left_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Direction/Turn Left" to="Player" method="_on_turn_left_state_physics_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Direction/Turn Right" to="Player" method="_on_turn_right_state_entered"]
[connection signal="state_exited" from="Player/StateChart/Root/Direction/Turn Right" to="Player" method="_on_turn_right_state_exited"]
[connection signal="state_physics_processing" from="Player/StateChart/Root/Direction/Turn Right" to="Player" method="_on_turn_right_state_physics_processing"]
[connection signal="state_entered" from="Player/StateChart/Root/Headbutting/Headbutt" to="Player" method="_on_headbutt_state_entered"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="state_entered" from="StateChart/Root/Movement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/Move Left" to="." method="_on_move_left_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/Move Right" to="." method="_on_move_right_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Ball Control/Kick" to="." method="_on_kick_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Ball Control/Dribble" to="." method="_on_dribble_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Ball Control/Dribble" to="." method="_on_dribble_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Behavior/Defend" to="." method="_on_defend_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Behavior/Seek" to="." method="_on_seek_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Behavior/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Behavior/Attack" to="." method="_on_attack_state_physics_processing"]
